--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
     </section>
     <section id="about" class="tab-content">
         <p>
-            Jestem pasjonatem technologii z doświadczeniem w tworzeniu nowoczesnych stron internetowych. Interesuje mnie
-            frontend, projektowanie interfejsów oraz automatyzacja. Z łatwością uczę się nowych technologii i potrafię
-            szybko wdrażać praktyczne rozwiązania. Szukam możliwości rozwoju w zespole IT, gdzie mógłbym wykorzystać
-            swoje umiejętności techniczne oraz zaangażowanie.
+          Jestem pasjonatem technologii, który łączy logiczne podejście do kodu z dbałością o detale wizualne. Tworzę nowoczesne strony internetowe, które są nie tylko funkcjonalne, ale i estetyczne – od czystego kodu po spójny interfejs. Szczególnie interesuje mnie frontend oraz projektowanie interaktywnych i responsywnych komponentów, które wyglądają jak zintegrowana całość – zarówno wizualnie, jak i technicznie.
         </p>
-    </section>
+        <p>
+          Uwielbiam pracować z kolorystyką i animacjami – moje motywy "Burgundy Velvet + Gold" oraz "Graphite + Cyber Lime" to przykład podejścia, w którym design łączy się z tożsamością projektu. W pracy korzystam z HTML, CSS i JavaScriptu, tworząc przejrzyste interfejsy z charakterem. Równocześnie rozwijam umiejętności backendowe i uczę się algorytmów – m.in. implementuję algorytmy genetyczne w Javie z dokładnością i optymalizacją.
+        </p>
+        <p>
+          Cenię konkret, estetykę i minimalizm – zarówno w kodzie, jak i w komunikacji. Szybko się uczę, analizuję wymagania i wdrażam praktyczne rozwiązania. Interesują mnie projekty, które mają sens i w których mogę łączyć technologię z kreatywnością. Szukam zespołu, gdzie będę mógł dalej rozwijać swoje mocne strony – techniczne i wizualne – w realnych projektach.
+        </p>
+      </section>
     <section id="project" class="tab-content">
         <div class="project">
             <h3>Nazwa projektu</h3>
