--- a/index.html
+++ b/index.html
@@ -33,22 +33,50 @@
     </section>
     <section id="about" class="tab-content">
         <p>
-          Jestem pasjonatem technologii, który łączy logiczne podejście do kodu z dbałością o detale wizualne. Tworzę nowoczesne strony internetowe, które są nie tylko funkcjonalne, ale i estetyczne – od czystego kodu po spójny interfejs. Szczególnie interesuje mnie frontend oraz projektowanie interaktywnych i responsywnych komponentów, które wyglądają jak zintegrowana całość – zarówno wizualnie, jak i technicznie.
+            Jestem pasjonatem technologii, który łączy logiczne podejście do kodu z dbałością o detale wizualne. Tworzę
+            nowoczesne strony internetowe, które są nie tylko funkcjonalne, ale i estetyczne – od czystego kodu po
+            spójny interfejs. Szczególnie interesuje mnie frontend oraz projektowanie interaktywnych i responsywnych
+            komponentów, które wyglądają jak zintegrowana całość – zarówno wizualnie, jak i technicznie.
         </p>
         <p>
-          Uwielbiam pracować z kolorystyką i animacjami – moje motywy "Burgundy Velvet + Gold" oraz "Graphite + Cyber Lime" to przykład podejścia, w którym design łączy się z tożsamością projektu. W pracy korzystam z HTML, CSS i JavaScriptu, tworząc przejrzyste interfejsy z charakterem. Równocześnie rozwijam umiejętności backendowe i uczę się algorytmów – m.in. implementuję algorytmy genetyczne w Javie z dokładnością i optymalizacją.
+            Uwielbiam pracować z kolorystyką i animacjami – moje motywy "Burgundy Velvet + Gold" oraz "Graphite + Cyber
+            Lime" to przykład podejścia, w którym design łączy się z tożsamością projektu. W pracy korzystam z HTML, CSS
+            i JavaScriptu, tworząc przejrzyste interfejsy z charakterem. Równocześnie rozwijam umiejętności backendowe i
+            uczę się algorytmów – m.in. implementuję algorytmy genetyczne w Javie z dokładnością i optymalizacją.
         </p>
         <p>
-          Cenię konkret, estetykę i minimalizm – zarówno w kodzie, jak i w komunikacji. Szybko się uczę, analizuję wymagania i wdrażam praktyczne rozwiązania. Interesują mnie projekty, które mają sens i w których mogę łączyć technologię z kreatywnością. Szukam zespołu, gdzie będę mógł dalej rozwijać swoje mocne strony – techniczne i wizualne – w realnych projektach.
+            Cenię konkret, estetykę i minimalizm – zarówno w kodzie, jak i w komunikacji. Szybko się uczę, analizuję
+            wymagania i wdrażam praktyczne rozwiązania. Interesują mnie projekty, które mają sens i w których mogę
+            łączyć technologię z kreatywnością. Szukam zespołu, gdzie będę mógł dalej rozwijać swoje mocne strony –
+            techniczne i wizualne – w realnych projektach.
         </p>
-      </section>
+    </section>
     <section id="project" class="tab-content">
         <div class="project">
-            <h3>Nazwa projektu</h3>
-            <p>Krótki opis: co robi projekt, jakie technologie.</p>
-            <p><strong>Technologie:</strong> HTML, CSS, JavaScript</p>
-            <a href="https://link-do-projektu" target="_blank">Zobacz projekt</a>
-            <a href="https://github.com/twojprofil/projekt" target="_blank">Kod źródłowy</a>
+            <h3>Konkursowy Bot Telegrama</h3>
+            <p>
+                Bot konkursowy stworzony w języku Python z wykorzystaniem biblioteki <strong>pyTelegramBotAPI</strong>.<br>
+                Projekt został zaprojektowany z myślą o organizacji konkursów w komunikatorze Telegram, <br>
+                umożliwiając użytkownikom przesyłanie własnych zgłoszeń, głosowanie na prace<br>
+                innych uczestników oraz śledzenie wyników w czasie rzeczywistym.<br>
+            </p>
+            <p>
+                Wbudowany system zarządzania zgłoszeniami wykorzystuje dynamiczne słowniki do przechowywania danych w<br>
+                trakcie działania, a konfiguracja środowiska opiera się na pliku <code>.env</code> dla bezpiecznego<br>
+                przechowywania tokenów i danych dostępowych. Dodatkowo, bot posiada wbudowany panel administracyjny,<br>
+                pozwalający na szybkie zarządzanie etapami konkursu bezpośrednio z poziomu chatu.<br>
+            </p>
+            <p><strong>Funkcje kluczowe:</strong></p>
+            <ul>
+                <li>Obsługa zgłoszeń użytkowników (np. tekst, obraz, link)</li>
+                <li>System głosowania z liczeniem punktów</li>
+                <li>Wyświetlanie listy zgłoszeń i wyników</li>
+                <li>Panel administratora z opcjami zarządzania konkursem</li>
+                <li>Konfiguracja przez plik <code>.env</code></li>
+            </ul>
+            <p><strong>Technologie:</strong> Python, pyTelegramBotAPI, dotenv</p>
+            <!-- <a href="https://github.com/Vadosmik/telegram-bot" target="_blank">Zobacz bota</a> -->
+            <a href="https://github.com/Vadosmik/telegram-bot" target="_blank">Kod źródłowy</a>
         </div>
 
         <div class="project">
