--- a/index.html
+++ b/index.html
@@ -33,23 +33,14 @@
     </section>
     <section id="about" class="tab-content">
         <p>
-            Jestem pasjonatem technologii, który łączy logiczne podejście do kodu z dbałością o detale wizualne. Tworzę
-            nowoczesne strony internetowe, które są nie tylko funkcjonalne, ale i estetyczne – od czystego kodu po
-            spójny interfejs. Szczególnie interesuje mnie frontend oraz projektowanie interaktywnych i responsywnych
-            komponentów, które wyglądają jak zintegrowana całość – zarówno wizualnie, jak i technicznie.
-        </p>
-        <p>
-            Uwielbiam pracować z kolorystyką i animacjami – moje motywy "Burgundy Velvet + Gold" oraz "Graphite + Cyber
-            Lime" to przykład podejścia, w którym design łączy się z tożsamością projektu. W pracy korzystam z HTML, CSS
-            i JavaScriptu, tworząc przejrzyste interfejsy z charakterem. Równocześnie rozwijam umiejętności backendowe i
-            uczę się algorytmów – m.in. implementuję algorytmy genetyczne w Javie z dokładnością i optymalizacją.
-        </p>
-        <p>
-            Cenię konkret, estetykę i minimalizm – zarówno w kodzie, jak i w komunikacji. Szybko się uczę, analizuję
-            wymagania i wdrażam praktyczne rozwiązania. Interesują mnie projekty, które mają sens i w których mogę
-            łączyć technologię z kreatywnością. Szukam zespołu, gdzie będę mógł dalej rozwijać swoje mocne strony –
-            techniczne i wizualne – w realnych projektach.
-        </p>
+            Student Informatyki na Uniwersytecie Morskim w Gdyni.
+          </p>
+          <p>
+            Interesuję się nowymi technologiami i chętnie uczę się nowych rzeczy, aby móc je wykorzystywać w praktyce.
+          </p>
+          <p>
+            Uwielbiam pracować nad projektami, które mają realne zastosowanie i przynoszą praktyczne korzyści.
+          </p>
     </section>
     <section id="project" class="tab-content">
         <div class="project">
