--- a/AllyBooksWeb/index.html
+++ b/AllyBooksWeb/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
   <div class="container">
-    <h1>Witaj!</h1>
+    <h1>Хэйка!</h1>
     <div class="buttons">
-      <a href="https://facebook.com" target="_blank">Facebook</a>
-      <a href="https://twitter.com" target="_blank">Twitter</a>
-      <a href="https://instagram.com" target="_blank">Instagram</a>
+      <a href="https://www.tiktok.com/@ally_books_comics?_t=8pgz6AAP4lM&_r=1" target="_blank">TikTok</a>
+      <a href="https://pin.it/WszvmJ1Yk" target="_blank">Pinterest</a>
+      <a href="https://t.me/HeartstopperTranslate" target="_blank">Telegram</a>
+      <a href="https://t.me/AllyBooksBot" target="_blank">Telegram_BOT</a>
     </div>
   </div>
 </body>
 </html>
+
+
