--- a/AllyBooksWeb/index.html
+++ b/AllyBooksWeb/index.html
@@ -9,14 +9,14 @@
 <body>
   <div class="container">
     <h1>Хэйка!</h1>
-    <div class="buttons">
+    <div class="buttons" id="container">
       <a href="https://www.tiktok.com/@ally_books_comics?_t=8pgz6AAP4lM&_r=1" target="_blank">TikTok</a>
       <a href="https://pin.it/WszvmJ1Yk" target="_blank">Pinterest</a>
       <a href="https://t.me/HeartstopperTranslate" target="_blank">Telegram</a>
       <a href="https://t.me/AllyBooksBot" target="_blank">Telegram_BOT</a>
     </div>
   </div>
+
+  <script src="leaves.js"></script>
 </body>
 </html>
-
-
