--- a/AllyBooksWeb/index.html
+++ b/AllyBooksWeb/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Хэйка!</h1>
+    <img id="ava" src="img/ava.jpg" alt="Avatar">
+    <h1>AllyBooks📚!</h1>
     <div class="buttons" id="container">
       <a href="https://www.tiktok.com/@ally_books_comics?_t=8pgz6AAP4lM&_r=1" target="_blank">TikTok</a>
       <a href="https://pin.it/WszvmJ1Yk" target="_blank">Pinterest</a>
