--- a/AllyBooksWeb/index.html
+++ b/AllyBooksWeb/index.html
@@ -16,6 +16,8 @@
       <a href="https://t.me/HeartstopperTranslate" target="_blank">Telegram</a>
       <a href="https://t.me/AllyBooksBot" target="_blank">Telegram_BOT</a>
     </div>
+    
+    <button id="animation_btn" onclick="toggleAnimationStatus()">Animacja on/off</button>
   </div>
 
   <script src="leaves.js"></script>
