animation toggle button

--- a/AllyBooksWeb/index.html
+++ b/AllyBooksWeb/index.html
@@ -19,7 +19,10 @@
             <a href="https://t.me/AllyBooksBot" target="_blank">Telegram_BOT</a>
         </div>
 
-        <button id="animation_btn" onclick="toggleAnimationStatus()">Animacja on/off</button>
+        <div id="animation">
+            <p>Анимация:</p>
+            <button id="animation_btn" onclick="toggleAnimationStatus()">on/off</button>
+        </div>
     </div>
 
     <script src="leaves.js"></script>
