--- a/AllyBooksWeb/index.html
+++ b/AllyBooksWeb/index.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
+    <div id="leaf-container"></div>
+
     <div class="container">
         <img id="ava" src="img/ava.jpg" alt="Avatar">
         <h1>AllyBooks📚!</h1>
-        <div class="buttons" id="container">
+        <div class="buttons">
             <a href="https://www.tiktok.com/@ally_books_comics?_t=8pgz6AAP4lM&_r=1" target="_blank">TikTok</a>
             <a href="https://pin.it/WszvmJ1Yk" target="_blank">Pinterest</a>
             <a href="https://t.me/HeartstopperTranslate" target="_blank">Telegram</a>
