--- a/AllyBooksWeb/wind/index.html
+++ b/AllyBooksWeb/wind/index.html
@@ -53,9 +53,9 @@
 
   <script>
     const leafImages = [
-      'img/leaf1.png', 'img/leaf2.png', 'img/leaf3.png',
-      'img/leaf4.png', 'img/leaf5.png', 'img/leaf6.png',
-      'img/leaf7.png', 'img/leaf8.png'
+      '../img/leaf1.png', '../img/leaf2.png', '../img/leaf3.png',
+      '../img/leaf4.png', '../img/leaf5.png', '../img/leaf6.png',
+      '../img/leaf7.png', '../img/leaf8.png'
     ];
 
     let a = 0.2, k = 3.0, b = 0.1;
