add new animation falling leaf and toggle animation

--- a/AllyBooksWeb/index.html
+++ b/AllyBooksWeb/index.html
@@ -23,7 +23,9 @@
 
         <div id="animation">
             <p>Анимация:</p>
-            <button id="animation_btn" onclick="toggleAnimationStatus()">on/off</button>
+            <button id="animation_btn" onclick="toggleAnimation(1)">падение</button>
+            <button id="animation_btn" onclick="toggleAnimation(2)">ветер</button>
+            <button id="animation_btn" onclick="toggleAnimation(3)">Stop</button>
         </div>
     </div>
 
