new setting view

--- a/AllyBooksWeb/index.html
+++ b/AllyBooksWeb/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <img id="ava" src="img/ava.jpg" alt="Avatar">
-        <h1>AllyBooks</h1>
+        <h1>Ally Books</h1>
         <div class="buttons">
             <a href="https://t.me/HeartstopperTranslate" target="_blank">Telegram</a>
             <a href="https://www.tiktok.com/@ally_books_comics?_t=8pgz6AAP4lM&_r=1" target="_blank">TikTok</a>
@@ -24,7 +24,7 @@
         <div id="animation">
             <nav class="tab-view" aria-label="Tabulator">
                 <ul>
-                    <li><button type="button" id="setting">⚙️</button></li>
+                    <li><button type="button" id="setting"><img src="img/setting.PNG"></button></li>
                 </ul>
             </nav>
             <section id="setting" class="tab-content">
