--- a/AllyBooksWeb/index.html
+++ b/AllyBooksWeb/index.html
@@ -29,7 +29,8 @@
             <section id="setting-panel" class="tab-content">
               <button class="animation_btn" onclick="toggleAnimation(1)">падение</button>
               <button class="animation_btn" onclick="toggleAnimation(2)">ветер</button>
-              <button class="animation_btn" onclick="toggleAnimation(3)">Stop</button>
+              <button class="animation_btn" onclick="toggleAnimation(4)">Stop</button>
+              <button class="animation_btn" onclick="toggleAnimation(3)">test</button>
             </section>
           </div>
     </div>
