--- a/HB_Sofi/index.html
+++ b/HB_Sofi/index.html
@@ -10,16 +10,18 @@
 </head>
 
 <body>
-  <div class="slider">
-    <section class="page style1">
-      <h2>Wszystkiego najlepszego 🎉</h2>
-      <aside>Przewiń w dół ↓</aside>
-    </section>
-    <section class="page style2">
-      <p>Zatrzymaj się i uśmiechnij 😄</p>
-    </section>
-    <!-- Możesz dodać więcej sekcji .page tutaj -->
+  <div class="page style1">
+    <h2>Wszystkiego najlepszego 🎉</h2>
+    <aside>Scrolluj w dół ↓</aside>
   </div>
+  <div class="page style2">
+    <p>Zatrzymaj się i uśmiechnij 😄</p>
+  </div>
+  <div class="page style3">
+    <p>Nowy slajd ✨</p>
+  </div>
+
+  <script src="js/scroll.js"></script>
 </body>
 
 </html>
