--- a/HB_Sofi/index.html
+++ b/HB_Sofi/index.html
@@ -6,20 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>tictock – Urodzinowy prezent</title>
   <link rel="stylesheet" href="css/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div class="page style1">
-    <h2>Wszystkiego najlepszego 🎉</h2>
-    <aside>Scrolluj w dół ↓</aside>
-  </div>
-  <div class="page style2">
-    <p>Zatrzymaj się i uśmiechnij 😄</p>
-  </div>
-  <div class="page style3">
-    <p>Nowy slajd ✨</p>
-  </div>
+
+  <main id="scroller">
+    <div class="page style1">
+      <h2>Wszystkiego najlepszego 🎉</h2>
+      <aside>Scrolluj w dół ↓</aside>
+    </div>
+    <div class="page style2">
+      <p>Zatrzymaj się i uśmiechnij 😄</p>
+    </div>
+    <div class="page style3">
+      <p>Nowy slajd ✨</p>
+    </div>
+  </main>
 
   <script src="js/scroll.js"></script>
 </body>
