update tekst and add page 3 with fireworks

--- a/HB_Sofi/index.html
+++ b/HB_Sofi/index.html
@@ -9,21 +9,36 @@
 </head>
 
 <body>
-
   <main id="scroller">
     <div class="page style1">
-      <h2>Wszystkiego najlepszego 🎉</h2>
-      <aside>Scrolluj w dół ↓</aside>
+      <h2>С днём рождения 🐒 🎉</h2>
+      <aside>Листай вниз ↓</aside>
     </div>
+
     <div class="page style2">
-      <p>Zatrzymaj się i uśmiechnij 😄</p>
+      <p>
+        Желаю тебе всего самого-самого лучшего! 💛<br><br>
+        Пусть любые мечты сбываются,
+        а желания исполняются ✨<br><br>
+        Пусть каждая авантюра проходит легко и с огоньком —<br>
+        а если и будут приключения,
+        то только весёлые и с хэппи-эндом 😄<br><br>
+        Встречай ярких, заводных и душевных людей (как ты сама!) 🌟<br>
+        И радуй всех, кто рядом 🍌<br><br>
+        Обнимашки от всей стаи обезьян 🐵💫
+      </p>
     </div>
+
     <div class="page style3">
-      <p>Nowy slajd ✨</p>
+      <canvas id="magicCanvas" style=""></canvas>
+      <div class="overlay-text">
+        <p>🍌  🐒</p>
+      </div>
     </div>
   </main>
 
   <script src="js/scroll.js"></script>
+  <script src="js/salut.js"></script>
 </body>
 
 </html>
