--- a/HB_Sofi/index.html
+++ b/HB_Sofi/index.html
@@ -15,16 +15,36 @@
       <aside>Листай вниз ↓</aside>
     </div>
 
-    <div class="page style2">
+    <!-- Страница 2.1 -->
+    <div class="page style2-1">
       <p>
         Желаю тебе всего самого-самого лучшего! 💛<br><br>
-        Пусть любые мечты сбываются,
-        а желания исполняются ✨<br><br>
+        Пусть любые мечты сбываются,<br>
+        а желания исполняются ✨
+      </p>
+    </div>
+
+    <!-- Страница 2.2 -->
+    <div class="page style2-2">
+      <p>
         Пусть каждая авантюра проходит легко и с огоньком —<br>
-        а если и будут приключения,
-        то только весёлые и с хэппи-эндом 😄<br><br>
-        Встречай ярких, заводных и душевных людей (как ты сама!) 🌟<br>
-        И радуй всех, кто рядом 🍌<br><br>
+        а если и будут приключения,<br>
+        то только весёлые и с хэппи-эндом 😄
+      </p>
+    </div>
+
+    <!-- Страница 2.3 -->
+    <div class="page style2-3">
+      <p>
+        Встречай ярких, заводных и душевных людей<br>
+        (как ты сама!) 🌟<br><br>
+        И радуй всех, кто рядом 🍌
+      </p>
+    </div>
+
+    <!-- Страница 2.4 -->
+    <div class="page style2-4">
+      <p>
         Обнимашки от всей стаи обезьян 🐵💫
       </p>
     </div>
@@ -32,7 +52,7 @@
     <div class="page style3">
       <canvas id="magicCanvas" style=""></canvas>
       <div class="overlay-text">
-        <p>🍌  🐒</p>
+        <p>🍌 🐒</p>
       </div>
     </div>
   </main>
