--- a/HB_Sofi/index.html
+++ b/HB_Sofi/index.html
@@ -18,34 +18,34 @@
     <!-- Страница 2.1 -->
     <div class="page style2-1">
       <p>
-        Желаю тебе всего самого-самого лучшего! 💛<br><br>
-        Пусть любые мечты сбываются,<br>
-        а желания исполняются ✨
+
+        <span>Желаю тебе всего самого-самого лучшего! 💛</span><br><br>
+        <span>Пусть любые мечты сбываются, а желания исполняются ✨</span><br><br>
       </p>
     </div>
 
     <!-- Страница 2.2 -->
     <div class="page style2-2">
       <p>
-        Пусть каждая авантюра проходит легко и с огоньком —<br>
-        а если и будут приключения,<br>
-        то только весёлые и с хэппи-эндом 😄
+        <span>Пусть каждая авантюра проходит легко и с огоньком —</span><br><br>
+        <span>а если и будут приключения,</span><br><br>
+        <span>то только весёлые и с хэппи-эндом 😄</span>
       </p>
     </div>
 
     <!-- Страница 2.3 -->
     <div class="page style2-3">
       <p>
-        Встречай ярких, заводных и душевных людей<br>
-        (как ты сама!) 🌟<br><br>
-        И радуй всех, кто рядом 🍌
+        <span>Встречай ярких, заводных и душевных людей</span><br><br>
+        <span>(как ты сама!) 🌟</span><br><br>
+        <span>И радуй всех, кто рядом 🍌</span>
       </p>
     </div>
 
     <!-- Страница 2.4 -->
     <div class="page style2-4">
       <p>
-        Обнимашки от всей стаи обезьян 🐵💫
+        <span>Обнимашки от всей стаи обезьян 🐵💫</span>
       </p>
     </div>
 
@@ -55,10 +55,26 @@
         <p>🍌 🐒</p>
       </div>
     </div>
+    <aside class="bottom-note">↑ конец ↑</aside>
   </main>
 
   <script src="js/scroll.js"></script>
   <script src="js/salut.js"></script>
+  <script>
+    const pages = document.querySelectorAll('.page');
+
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('visible');
+        }
+      });
+    }, {
+      threshold: 0.4,
+    });
+
+    pages.forEach(page => observer.observe(page));
+  </script>
 </body>
 
 </html>
