--- a/HB_Sofi/index.html
+++ b/HB_Sofi/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>tictock – Urodzinowy prezent</title>
+  <title>Wszystkiego najlepszego! 🎉</title>
+  <meta name="description" content="Mała urodzinowa kartka – przewijaj w dół i odkrywaj! 🎈💛" />
+  <meta name="theme-color" content="#fce8e1" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
