--- a/HB_Sofi/index.html
+++ b/HB_Sofi/index.html
@@ -38,8 +38,7 @@
     <!-- Страница 2.3 -->
     <div class="page style2-3">
       <p>
-        <span>Встречай ярких, заводных и душевных людей</span><br><br>
-        <span>(как ты сама!) 🌟</span><br><br>
+        <span>Встречай ярких, заводных и душевных людей (как ты сама!) 🌟</span><br><br>
         <span>И радуй всех, кто рядом 🍌</span>
       </p>
     </div>
