--- a/HB_Sofi/index.html
+++ b/HB_Sofi/index.html
@@ -8,9 +8,11 @@
   <meta name="description" content="Mała urodzinowa kartka – przewijaj w dół i odkrywaj! 🎈💛" />
   <meta name="theme-color" content="#fce8e1" />
   <link rel="stylesheet" href="css/style.css" />
+  <audio id="bg-music" src="/music/back.mp3" loop autoplay></audio>
 </head>
 
 <body>
+  </div>
   <main id="scroller">
     <div class="page style1">
       <h2>С днём рождения 🐒 🎉</h2>
@@ -24,6 +26,34 @@
         <span>Желаю тебе всего самого-самого лучшего! 💛</span><br><br>
         <span>Пусть любые мечты сбываются, а желания исполняются ✨</span><br><br>
       </p>
+      <div class="ticker-line" style="top: -500px; rotate: 30deg;">
+        <div class="ticker-track">
+          <span>с днем рождения</span>
+          <span>с днем рождения</span>
+          <span>с днем рождения</span>
+          <span>с днем рождения</span>
+
+          <!-- DUBLUJEMY wszystko dla płynnego loopa -->
+          <span>с днем рождения</span>
+          <span>с днем рождения</span>
+          <span>с днем рождения</span>
+          <span>с днем рождения</span>
+        </div>
+      </div>
+      <div class="ticker-line">
+        <div class="ticker-track">
+          <span>с днем рождения</span>
+          <span>с днем рождения</span>
+          <span>с днем рождения</span>
+          <span>с днем рождения</span>
+
+          <!-- DUBLUJEMY wszystko dla płynnego loopa -->
+          <span>с днем рождения</span>
+          <span>с днем рождения</span>
+          <span>с днем рождения</span>
+          <span>с днем рождения</span>
+        </div>
+      </div>
     </div>
 
     <!-- Страница 2.2 -->
