--- a/HB_Sofi/index.html
+++ b/HB_Sofi/index.html
@@ -40,7 +40,7 @@
           <span>с днем рождения</span>
         </div>
       </div>
-      <div class="ticker-line">
+      <div class="ticker-line" style="top: 150px; rotate: -15deg;">
         <div class="ticker-track">
           <span>с днем рождения</span>
           <span>с днем рождения</span>
