add dark/light mode

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
   <footer>
 
   </footer>
+  <button id="theme-toggle" class="theme-btn">
+  <span class="sun">☀️</span>
+  <span class="moon">🌙</span>
+</button>
 </body>
+
+<script src="script.js"></script>
 
 </html>
