--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="author" content="Vadzim Mikanovich">
   <meta name="keywords" content="Vadzim Mikanovich, CV, vadosmik">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
